Added encrypt decrypt end points with user auth

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,11 @@
 @tailwind utilities;
 
 body {
+    /* background: linear-gradient(
+        180.2deg,
+        rgb(30, 33, 48) 6.8%,
+        rgb(74, 98, 110) 131%
+    ); */
     background-color: #1f1f1f;
     color: #fff;
 }
