--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,7 @@ body {
     font-family: "Satoshi";
     src: url("./fonts/Satoshi/Satoshi-Variable.ttf");
 }
+
+body::-webkit-scrollbar {
+    display: none;
+}
